@@ -1,3 +1,8 @@
+2007-10-04  Ray Strode  <rstrode@redhat.com>
+
+	* libgnome/gnome-init.c: apply old distro patch from Dan Walsh to 
+	be more SELinux friendly. Spotted by Kjartan Maraas.
+
 2007-10-04  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-init.c: (libgnome_option_cb): Warning fix.
